Release 24w35a (snapshot)