@@ -1,51 +1,63 @@
-import com.google.common.collect.ImmutableList;
 import com.mojang.brigadier.CommandDispatcher;
 import com.mojang.brigadier.arguments.IntegerArgumentType;
+import com.mojang.brigadier.arguments.StringArgumentType;
 import com.mojang.brigadier.builder.LiteralArgumentBuilder;
+import com.mojang.brigadier.builder.RequiredArgumentBuilder;
+import com.mojang.brigadier.exceptions.CommandSyntaxException;
+import com.mojang.brigadier.exceptions.SimpleCommandExceptionType;
 import java.util.Collection;
+import java.util.List;
 
 public class apn {
-   public static void a(CommandDispatcher<et> $$0) {
+   private static final SimpleCommandExceptionType a = new SimpleCommandExceptionType(xe.c("commands.transfer.error.no_players"));
+
+   public static void a(CommandDispatcher<eu> $$0) {
       $$0.register(
-         (LiteralArgumentBuilder)((LiteralArgumentBuilder)((LiteralArgumentBuilder)eu.a("warden_spawn_tracker").requires($$0x -> $$0x.c(2)))
-               .then(eu.a("clear").executes($$0x -> a((et)$$0x.getSource(), ImmutableList.of(((et)$$0x.getSource()).h())))))
+         (LiteralArgumentBuilder)((LiteralArgumentBuilder)ev.a("transfer").requires($$0x -> $$0x.c(3)))
             .then(
-               eu.a("set")
+               ((RequiredArgumentBuilder)ev.a("hostname", StringArgumentType.string())
+                     .executes($$0x -> a((eu)$$0x.getSource(), StringArgumentType.getString($$0x, "hostname"), 25565, List.of(((eu)$$0x.getSource()).h()))))
                   .then(
-                     eu.a("warning_level", IntegerArgumentType.integer(0, 4))
-                        .executes(
-                           $$0x -> a((et)$$0x.getSource(), ImmutableList.of(((et)$$0x.getSource()).h()), IntegerArgumentType.getInteger($$0x, "warning_level"))
+                     ((RequiredArgumentBuilder)ev.a("port", IntegerArgumentType.integer(1, 65535))
+                           .executes(
+                              $$0x -> a(
+                                    (eu)$$0x.getSource(),
+                                    StringArgumentType.getString($$0x, "hostname"),
+                                    IntegerArgumentType.getInteger($$0x, "port"),
+                                    List.of(((eu)$$0x.getSource()).h())
+                                 )
+                           ))
+                        .then(
+                           ev.a("players", fh.d())
+                              .executes(
+                                 $$0x -> a(
+                                       (eu)$$0x.getSource(),
+                                       StringArgumentType.getString($$0x, "hostname"),
+                                       IntegerArgumentType.getInteger($$0x, "port"),
+                                       fh.f($$0x, "players")
+                                    )
+                              )
                         )
                   )
             )
       );
    }
 
-   private static int a(et $$0, Collection<? extends cnu> $$1, int $$2) {
-      for (cnu $$3 : $$1) {
-         $$3.ad().ifPresent($$1x -> $$1x.a($$2));
-      }
-
-      if ($$1.size() == 1) {
-         $$0.a(() -> xd.a("commands.warden_spawn_tracker.set.success.single", $$1.iterator().next().Q_()), true);
+   private static int a(eu $$0, String $$1, int $$2, Collection<ark> $$3) throws CommandSyntaxException {
+      if ($$3.isEmpty()) {
+         throw a.create();
       } else {
-         $$0.a(() -> xd.a("commands.warden_spawn_tracker.set.success.multiple", $$1.size()), true);
+         for (ark $$4 : $$3) {
+            $$4.c.b(new aab($$1, $$2));
+         }
+
+         if ($$3.size() == 1) {
+            $$0.a(() -> xe.a("commands.transfer.success.single", $$3.iterator().next().R_(), $$1, $$2), true);
+         } else {
+            $$0.a(() -> xe.a("commands.transfer.success.multiple", $$3.size(), $$1, $$2), true);
+         }
+
+         return $$3.size();
       }
-
-      return $$1.size();
-   }
-
-   private static int a(et $$0, Collection<? extends cnu> $$1) {
-      for (cnu $$2 : $$1) {
-         $$2.ad().ifPresent(cna::b);
-      }
-
-      if ($$1.size() == 1) {
-         $$0.a(() -> xd.a("commands.warden_spawn_tracker.clear.success.single", $$1.iterator().next().Q_()), true);
-      } else {
-         $$0.a(() -> xd.a("commands.warden_spawn_tracker.clear.success.multiple", $$1.size()), true);
-      }
-
-      return $$1.size();
    }
 }
