@@ -1,170 +1,109 @@
-import com.google.gson.JsonObject;
+import com.google.common.annotations.VisibleForTesting;
 import com.mojang.brigadier.StringReader;
 import com.mojang.brigadier.arguments.ArgumentType;
 import com.mojang.brigadier.context.CommandContext;
 import com.mojang.brigadier.exceptions.CommandSyntaxException;
-import com.mojang.brigadier.exceptions.Dynamic2CommandExceptionType;
-import com.mojang.brigadier.exceptions.Dynamic3CommandExceptionType;
-import com.mojang.brigadier.suggestion.Suggestions;
-import com.mojang.brigadier.suggestion.SuggestionsBuilder;
-import com.mojang.datafixers.util.Either;
-import java.util.Arrays;
+import com.mojang.brigadier.exceptions.DynamicCommandExceptionType;
+import com.mojang.brigadier.exceptions.SimpleCommandExceptionType;
+import com.mojang.serialization.Codec;
 import java.util.Collection;
-import java.util.Optional;
-import java.util.concurrent.CompletableFuture;
-import java.util.function.Predicate;
+import java.util.List;
+import javax.annotation.Nullable;
 
-public class fw<T> implements ArgumentType<fw.c<T>> {
-   private static final Collection<String> a = Arrays.asList("foo", "foo:bar", "012", "#skeletons", "#minecraft:skeletons");
-   private static final Dynamic2CommandExceptionType b = new Dynamic2CommandExceptionType(($$0, $$1) -> xd.b("argument.resource_tag.not_found", $$0, $$1));
-   private static final Dynamic3CommandExceptionType c = new Dynamic3CommandExceptionType(
-      ($$0, $$1, $$2) -> xd.b("argument.resource_tag.invalid_type", $$0, $$1, $$2)
-   );
-   private final jp<T> d;
-   final alb<? extends ka<T>> e;
+public class fw<T> implements ArgumentType<jo<T>> {
+   private static final Collection<String> b = List.of("foo", "foo:bar", "012", "{}", "true");
+   public static final DynamicCommandExceptionType a = new DynamicCommandExceptionType($$0 -> xe.b("argument.resource_or_id.failed_to_parse", $$0));
+   private static final SimpleCommandExceptionType c = new SimpleCommandExceptionType(xe.c("argument.resource_or_id.invalid"));
+   private final jq.a d;
+   private final boolean e;
+   private final Codec<jo<T>> f;
 
-   public fw(ep $$0, alb<? extends ka<T>> $$1) {
-      this.e = $$1;
-      this.d = $$0.b($$1);
+   protected fw(eq $$0, ald<kb<T>> $$1, Codec<jo<T>> $$2) {
+      this.d = $$0;
+      this.e = $$0.a($$1).isPresent();
+      this.f = $$2;
    }
 
-   public static <T> fw<T> a(ep $$0, alb<? extends ka<T>> $$1) {
-      return new fw<>($$0, $$1);
+   public static fw.c a(eq $$0) {
+      return new fw.c($$0);
    }
 
-   public static <T> fw.c<T> a(CommandContext<et> $$0, String $$1, alb<ka<T>> $$2) throws CommandSyntaxException {
-      fw.c<?> $$3 = (fw.c<?>)$$0.getArgument($$1, fw.c.class);
-      Optional<fw.c<T>> $$4 = $$3.a($$2);
-      return $$4.orElseThrow(() -> (CommandSyntaxException)$$3.a().map($$1xx -> {
-            alb<?> $$2x = $$1xx.h();
-            return fs.b.create($$2x.a(), $$2x.b(), $$2.a());
-         }, $$1xx -> {
-            axj<?> $$2x = $$1xx.h();
-            return c.create($$2x.b(), $$2x.a(), $$2.a());
-         }));
+   public static jo<etq> a(CommandContext<eu> $$0, String $$1) throws CommandSyntaxException {
+      return d($$0, $$1);
    }
 
-   public fw.c<T> a(StringReader $$0) throws CommandSyntaxException {
-      if ($$0.canRead() && $$0.peek() == '#') {
-         int $$1 = $$0.getCursor();
+   public static fw.a b(eq $$0) {
+      return new fw.a($$0);
+   }
 
-         try {
-            $$0.skip();
-            alc $$2 = alc.a($$0);
-            axj<T> $$3 = axj.a(this.e, $$2);
-            jr.c<T> $$4 = this.d.a($$3).orElseThrow(() -> b.createWithContext($$0, $$2, this.e.a()));
-            return new fw.d<>($$4);
-         } catch (CommandSyntaxException var6) {
-            $$0.setCursor($$1);
-            throw var6;
-         }
+   public static jo<euz> b(CommandContext<eu> $$0, String $$1) {
+      return d($$0, $$1);
+   }
+
+   public static fw.b c(eq $$0) {
+      return new fw.b($$0);
+   }
+
+   public static jo<eww> c(CommandContext<eu> $$0, String $$1) {
+      return d($$0, $$1);
+   }
+
+   private static <T> jo<T> d(CommandContext<eu> $$0, String $$1) {
+      return (jo<T>)$$0.getArgument($$1, jo.class);
+   }
+
+   @Nullable
+   public jo<T> a(StringReader $$0) throws CommandSyntaxException {
+      vd $$1 = b($$0);
+      if (!this.e) {
+         return null;
       } else {
-         alc $$6 = alc.a($$0);
-         alb<T> $$7 = alb.a(this.e, $$6);
-         jn.c<T> $$8 = this.d.a($$7).orElseThrow(() -> fs.a.createWithContext($$0, $$6, this.e.a()));
-         return new fw.b<>($$8);
+         alc<vd> $$2 = this.d.a(uu.a);
+         return (jo<T>)this.f.parse($$2, $$1).getOrThrow($$1x -> a.createWithContext($$0, $$1x));
       }
    }
 
-   public <S> CompletableFuture<Suggestions> listSuggestions(CommandContext<S> $$0, SuggestionsBuilder $$1) {
-      ey.a(this.d.e().map(axj::b), $$1, "#");
-      return ey.a(this.d.c().map(alb::a), $$1);
+   @VisibleForTesting
+   static vd b(StringReader $$0) throws CommandSyntaxException {
+      int $$1 = $$0.getCursor();
+      vd $$2 = new ve($$0).d();
+      if (c($$0)) {
+         return $$2;
+      } else {
+         $$0.setCursor($$1);
+         ale $$3 = ale.a($$0);
+         if (c($$0)) {
+            return vb.a($$3.toString());
+         } else {
+            $$0.setCursor($$1);
+            throw c.createWithContext($$0);
+         }
+      }
+   }
+
+   private static boolean c(StringReader $$0) {
+      return !$$0.canRead() || $$0.peek() == ' ';
    }
 
    public Collection<String> getExamples() {
-      return a;
+      return b;
    }
 
-   public static class a<T> implements ip<fw<T>, fw.a<T>.a> {
-      public void a(fw.a<T>.a $$0, wa $$1) {
-         $$1.b($$0.b);
-      }
-
-      public fw.a<T>.a a(wa $$0) {
-         return new fw.a.a($$0.r());
-      }
-
-      public void a(fw.a<T>.a $$0, JsonObject $$1) {
-         $$1.addProperty("registry", $$0.b.a().toString());
-      }
-
-      public fw.a<T>.a a(fw<T> $$0) {
-         return new fw.a.a($$0.e);
-      }
-
-      public final class a implements ip.a<fw<T>> {
-         final alb<? extends ka<T>> b;
-
-         a(final alb<? extends ka<T>> $$1) {
-            this.b = $$1;
-         }
-
-         public fw<T> a(ep $$0) {
-            return new fw<>($$0, this.b);
-         }
-
-         @Override
-         public ip<fw<T>, ?> a() {
-            return a.this;
-         }
+   public static class a extends fw<euz> {
+      protected a(eq $$0) {
+         super($$0, lw.bf, evb.d);
       }
    }
 
-   static record b<T>(jn.c<T> a) implements fw.c<T> {
-      @Override
-      public Either<jn.c<T>, jr.c<T>> a() {
-         return Either.left(this.a);
-      }
-
-      @Override
-      public <E> Optional<fw.c<E>> a(alb<? extends ka<E>> $$0) {
-         return this.a.h().c($$0) ? Optional.of((fw.c<E>)this) : Optional.empty();
-      }
-
-      public boolean a(jn<T> $$0) {
-         return $$0.equals(this.a);
-      }
-
-      @Override
-      public String b() {
-         return this.a.h().a().toString();
-      }
-
-      public jn.c<T> c() {
-         return this.a;
+   public static class b extends fw<eww> {
+      protected b(eq $$0) {
+         super($$0, lw.bg, eww.f);
       }
    }
 
-   public interface c<T> extends Predicate<jn<T>> {
-      Either<jn.c<T>, jr.c<T>> a();
-
-      <E> Optional<fw.c<E>> a(alb<? extends ka<E>> var1);
-
-      String b();
-   }
-
-   static record d<T>(jr.c<T> a) implements fw.c<T> {
-      @Override
-      public Either<jn.c<T>, jr.c<T>> a() {
-         return Either.right(this.a);
-      }
-
-      @Override
-      public <E> Optional<fw.c<E>> a(alb<? extends ka<E>> $$0) {
-         return this.a.h().c($$0) ? Optional.of((fw.c<E>)this) : Optional.empty();
-      }
-
-      public boolean a(jn<T> $$0) {
-         return this.a.a($$0);
-      }
-
-      @Override
-      public String b() {
-         return "#" + this.a.h().b();
-      }
-
-      public jr.c<T> c() {
-         return this.a;
+   public static class c extends fw<etq> {
+      protected c(eq $$0) {
+         super($$0, lw.be, etq.e);
       }
    }
 }
