@@ -3,40 +3,36 @@ import com.mojang.brigadier.arguments.ArgumentType;
 import com.mojang.brigadier.context.CommandContext;
 import com.mojang.brigadier.exceptions.CommandSyntaxException;
 import com.mojang.brigadier.exceptions.DynamicCommandExceptionType;
-import com.mojang.brigadier.suggestion.Suggestions;
-import com.mojang.brigadier.suggestion.SuggestionsBuilder;
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.concurrent.CompletableFuture;
+import java.util.List;
 
-public class gf implements ArgumentType<String> {
-   private static final Collection<String> a = Arrays.asList("foo", "123");
-   private static final DynamicCommandExceptionType b = new DynamicCommandExceptionType($$0 -> xd.b("team.notFound", $$0));
+public class gf implements ArgumentType<yb> {
+   private static final Collection<String> b = List.of("{\"bold\": true}\n");
+   public static final DynamicCommandExceptionType a = new DynamicCommandExceptionType($$0 -> xe.b("argument.style.invalid", $$0));
+   private final jq.a c;
 
-   public static gf a() {
-      return new gf();
+   private gf(jq.a $$0) {
+      this.c = $$0;
    }
 
-   public static ezs a(CommandContext<et> $$0, String $$1) throws CommandSyntaxException {
-      String $$2 = (String)$$0.getArgument($$1, String.class);
-      ezx $$3 = ((et)$$0.getSource()).l().aJ();
-      ezs $$4 = $$3.b($$2);
-      if ($$4 == null) {
-         throw b.create($$2);
-      } else {
-         return $$4;
+   public static yb a(CommandContext<eu> $$0, String $$1) {
+      return (yb)$$0.getArgument($$1, yb.class);
+   }
+
+   public static gf a(eq $$0) {
+      return new gf($$0);
+   }
+
+   public yb a(StringReader $$0) throws CommandSyntaxException {
+      try {
+         return ey.a(this.c, $$0, yb.b.b);
+      } catch (Exception var4) {
+         String $$2 = var4.getCause() != null ? var4.getCause().getMessage() : var4.getMessage();
+         throw a.createWithContext($$0, $$2);
       }
    }
 
-   public String a(StringReader $$0) throws CommandSyntaxException {
-      return $$0.readUnquotedString();
-   }
-
-   public <S> CompletableFuture<Suggestions> listSuggestions(CommandContext<S> $$0, SuggestionsBuilder $$1) {
-      return $$0.getSource() instanceof ey ? ey.b(((ey)$$0.getSource()).r(), $$1) : Suggestions.empty();
-   }
-
    public Collection<String> getExamples() {
-      return a;
+      return b;
    }
 }
